--- a/main.css
+++ b/main.css
@@ -12,18 +12,28 @@ body {
     background-size: 100%;
     background-repeat: no-repeat;
     height: 720px;
+
 }
 
 
 .person {
+    position: relative;
     display: flex;
     margin-top: 10%;
     margin-left: 10%;
 }
 
+#firstPerson {
+    position: absolute;
+    transition: all 0.5s;
+
+}
+
 #secondPerson {
-    margin-left: 56%;
+    position: absolute;
+    margin-left: 70%;
     margin-top: -2%;
+
 }
 
 .time {
@@ -60,27 +70,25 @@ body {
     width: 300px;
 }
 
-.lifePerson1 {
-    background-color: rgb(239, 104, 54);
-    background-size: auto;
-    width: 100%;
-    height: 10px;
-    border: 4px;
-    border-style: solid;
-    border-radius: 10px;
-    border-color: rgb(214, 177, 16);
+#lifePerson1 {
+    width: 350px;
+    height: 20px;
+    border: 2px solid gray;
+    background: linear-gradient(45deg, green, green);
+    background-size: 450px 29px;
+    background-repeat: no-repeat;
+
 }
 
-.lifePerson2 {
-    background-color: rgb(239, 104, 54);
-    background-size: auto;
-    width: 100%;
-    height: 10px;
-    border: 4px;
-    border-style: solid;
-    border-radius: 10px;
-    border-color: rgb(214, 177, 16);
-    margin-left: 270%;
+#lifePerson2 {
+    width: 350px;
+    height: 20px;
+    border: 2px solid gray;
+    background: linear-gradient(45deg, green, green);
+    background-size: 450px 29px;
+    background-repeat: no-repeat;
+
+    margin-left: 255%;
     margin-top: -7%;
 }
 
