--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ body {
     display: flex;
     margin-top: 10%;
     margin-left: 10%;
+
 }
 
 #firstPerson {
@@ -107,4 +108,108 @@ body {
 
 #namePeron2 {
     margin-left: 54%;
+}
+
+/* Стоїть на місці, зібльшується, підпригує, повертається */
+
+
+@keyframes example {
+    0% {
+        margin-top: -10%;
+
+
+
+    }
+
+    25% {
+
+        margin-left: 35%;
+        margin-top: -10%;
+        transform: rotate(360deg);
+
+
+    }
+
+    50% {
+        margin-left: 60%;
+        /* transform: rotate(0deg); */
+        transform: scale(1.2);
+
+    }
+
+    75% {
+        /* transform: scale(1.2); */
+        margin-top: 0%;
+    }
+
+    100% {
+        transform: scale(1.3);
+        transform: rotate(0deg);
+    }
+}
+
+.punchAnimation {
+    animation: example 2s linear;
+}
+
+
+@keyframes example {
+    0% {
+        margin-top: -10%;
+
+    }
+
+    25% {
+
+        margin-top: -10%;
+        transform: rotate(360deg);
+
+
+    }
+
+    50% {
+        margin-left: 10%;
+        /* transform: rotate(0deg); */
+        transform: scale(1.2);
+
+    }
+
+    75% {
+        /* transform: scale(1.2); */
+        margin-top: -5%;
+    }
+
+    100% {
+        transform: scale(1.3);
+        transform: rotate(0deg);
+    }
+}
+
+.punchAnimation2 {
+    animation: example 4s linear;
+}
+
+#createPerson {
+    background-color: rgb(255, 183, 1);
+    width: 15%;
+    font-family: 'Diplomata SC', cursive;
+    margin-left: 40%;
+    margin-top: 5%;
+}
+
+#modalNewPerson {
+    background-color: rgb(128, 120, 120);
+    width: 50%;
+    height: 400px;
+    margin-top: -40%;
+    margin-left: 25%;
+    z-index: 1;
+}
+
+#newPerson {
+    font-size: 30px;
+}
+
+#mood {
+    display: none;
 }
